--- a/dominicshaw.net/dominicshaw.net.csproj
+++ b/dominicshaw.net/dominicshaw.net.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Content Include="img\Slider-img10.JPG" />
     <Content Include="img\Slider-img11.JPG" />
+    <Content Include="img\Slider-img12.JPG" />
     <Content Include="img\Slider-img3.JPG" />
     <Content Include="img\Slider-img4.jpg" />
     <Content Include="img\Slider-img5.JPG" />
