contact form/new mail host (moving host)

--- a/dominicshaw.net/Web.config
+++ b/dominicshaw.net/Web.config
@@ -13,7 +13,7 @@
   <system.net>
     <mailSettings>
       <smtp from="postmaster@dominicshaw.net" deliveryMethod="Network">
-        <network host="localhost" port="25" defaultCredentials="false" userName="postmaster@dominicshaw.net" password="redacted"/>
+        <network host="mail.dominicshaw.net" port="25" defaultCredentials="false" userName="postmaster@dominicshaw.net" password="redacted"/>
       </smtp>
     </mailSettings>
   </system.net>
